# C2Rust-WASM-LLVM

./: README.md
c2llvm/: c2llvm  c2llvm.bc  c2llvm.c  c2llvm.ll
c2rust_test/: call_graph_analyzer.py  llvm_analyzer.py  llvm_analyzer_cfg.py  llvm_analyzer_pass  llvm_analyzer_pass.cpp  llvm_analyzer_pass.py  memory_safety_analyzer.py  wat_analyzer.py
c2rust_test/analysis/const_translation/: ConstTranslationAnalysis.cpp
c2rust_test/analysis/cross_language/: CMakeLists.txt  CrossLanguageAnalysis.cpp
c2rust_test/analysis/cross_language/c_code/: cross_language_test.c  cross_language_test.ll
c2rust_test/analysis/data_flow/: CMakeLists.txt  DataFlowAnalysis.cpp
c2rust_test/analysis/data_flow/c_code/: test_data_flow.c  test_data_flow.ll
c2rust_test/analysis/memory_safety/: CMakeLists.txt  MemorySafetyAnalysis.cpp
c2rust_test/analysis/memory_safety/rust_code/: Cargo.toml
c2rust_test/analysis/memory_safety/rust_code/src/: main.rs
c2rust_test/analysis_result_pass/: cpp_analysis_results.json  summary.json
c2rust_test/analysis_result_pass/program_001/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_002/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_003/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_004/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_007/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_008/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_009/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_011/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_012/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_013/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_014/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_015/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_016/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_017/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_018/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_019/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_020/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_021/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_022/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_023/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_024/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/analysis_result_pass/program_025/: c_analysis.json  c_callgraph.dot  rust_analysis.json  rust_callgraph.dot
c2rust_test/c_code/: c2llvm.bc  c2llvm.ll  c2llvm_norm.ll  c2llvm_norm.symtab  c2llvm_opt.ll  c2wasm.wasm  main.c  projects_info.json  reesult.json  source_map.json
c2rust_test/call_graph_analysis/: summary.json
c2rust_test/memory_safety/: CMakeLists.txt  MemorySafetyAnalysis.cpp
c2rust_test/memory_safety/c_code/: test_memory_issues.c  test_memory_issues.ll
c2rust_test/memory_safety_analysis/: memory_safety_analysis_results.json  memory_safety_summary.json
c2rust_test/overflow_test/: Cargo.toml
c2rust_test/rust_code/: Cargo.toml  rust2llvm.symtab
c2rust_test/script/: c2rust_converter.py  github_c_scraper.py  organize_c_files.py  rust2llvm.py
c2rust_test/test/const_samples/const_translation/: CMakeLists.txt  ConstTranslationAnalysis.cpp
c2wasm/: c2wasm.wasm
c2wasm/pkg/: c2wasm.html  c2wasm.js  c2wasm.wat
rust2llvm/: Cargo.toml
rust2llvm/src/: lib.rs
rust2wasm/: Cargo.toml
rust2wasm/src/: lib.rs
(+913 files in other folders)
